--- a/src/components/editor/editor.styles.scss
+++ b/src/components/editor/editor.styles.scss
@@ -33,14 +33,25 @@
     .editor-area {
         width: 702px;
         textarea {
+            height: 560px;
             border:none;
             padding-left: 6px;
-            padding-right: 10px;
             background-color:inherit;
             border: none;
             font-size: 16px;
             outline: none;
             width: 689px;
+        }
+    }
+}
+
+.scaled {
+    height: 1000px;
+    .editor-area {
+        height: inherit;
+        #editor {
+            height: 960px;
+            padding-right: 0;
         }
     }
 }
