--- a/src/components/editor/editor.styles.scss
+++ b/src/components/editor/editor.styles.scss
@@ -46,7 +46,8 @@
 }
 
 .scaled {
-    height: 1000px;
+    min-height: 1000px;
+    height: fit-content;
     .editor-area {
         height: inherit;
         #editor {
