--- a/src/components/previewer/previewer.styles.scss
+++ b/src/components/previewer/previewer.styles.scss
@@ -2,8 +2,9 @@
     width: 1000px;
     min-height: 500px;
     height: fit-content;
+
     border: #00675C	 solid 3px;
-    background-color: rgba(0,103,92, .1);
+    background-color: rgba(250, 250, 250, 0.1);
     margin-left: 50%;
     transform: translateX(-50%);
     margin-bottom: 100px;
@@ -34,12 +35,43 @@
     }
     .review-area {
         padding: 0 5px;
+        padding-left: 15px;
         text-align: left;
         font-size: 20px;
         font-weight: 400;
         width: 100%;
         word-wrap: break-word;
+        font-family: 'Lato', sans-serif;
+
+        img {
+            max-width: 95%;
+            margin: 2rem 1rem;
+        }
+        code {
+            background-color: #fff;
+        }
+        pre {
+            padding: 4px 4px;
+            width: 90%;
+            background-color: #fff;
+            border-radius: 1%;
+        }
+        blockquote {
+            border-left: 4px solid #000;
+            padding-left: 2px;
+        }
+        table {
+            border: 2px solid black;
+            border-collapse: collapse;
+            td, th {
+                border-bottom: 2px solid #000;
+                border-right: 2px solid black;
+                padding-left: 4px;
+                padding-right: 4px;
+            }
+        }
     }
+    
 }
 
 .scaled {
